<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Taskmon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="toggle_Start">START</string>
    <string name="toggle_stop">STOP</string>
    <string name="set_budget">Budget [C]</string>
    <string name="set_time">Time [T]</string>
    <string name="set_threadid">Thread ID</string>
    <string name="set_button">Set</string>
    <string name="cancel_button">Cancel</string>
    <string name="set_cpuid">CPU Core</string>
    <string name="start_monitor">Monitor</string>
    <string name="title_activity_display_table">Display Energy</string>
    <string name="title_monitor">Monitor Threads</string>
    <string name="display_button">Display</string>
    <string name="list_rtthreads">RtThreads</string>

</resources>
