<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RadioGroup
        android:id="@+id/set_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_button"
        android:layout_below="@+id/set_button"
        android:layout_marginTop="63dp"
        android:text="@string/set_threadid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="60dp"
        android:text="@string/set_budget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="66dp"
        android:text="@string/set_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="80dp"
        android:text="@string/set_cpuid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/pid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/cancel_button"
        android:ems="6"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/c_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/pid_text"
        android:ems="6"
        android:inputType="number" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_marginLeft="69dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/cancel_button" />

    <EditText
        android:id="@+id/t_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/c_text"
        android:ems="6"
        android:inputType="number" />

    <EditText
        android:id="@+id/cpuid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/t_text"
        android:ems="6"
        android:inputType="number" />

    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_cancel"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="99dp"
        android:layout_toRightOf="@+id/set_cancel"
        android:text="@string/set_button" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/pid_text"
        android:prompt="@string/list_rtthreads" />

    <ToggleButton
        android:id="@+id/toggle_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpuid_text"
        android:layout_below="@+id/cpuid_text"
        android:layout_marginTop="58dp"
        android:text="ToggleButton"
        android:textOff="@string/toggle_Start"
        android:textOn="@string/toggle_stop" />

</RelativeLayout>